fix: use records instead of classes